; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/net/extr_qeth_core_main.c_qeth_free_qdio_queue.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/net/extr_qeth_core_main.c_qeth_free_qdio_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qeth_qdio_q = type { i32 }

@QDIO_MAX_BUFFERS_PER_Q = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.qeth_qdio_q*)* @qeth_free_qdio_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qeth_free_qdio_queue(%struct.qeth_qdio_q* %0) #0 {
  %2 = alloca %struct.qeth_qdio_q*, align 8
  store %struct.qeth_qdio_q* %0, %struct.qeth_qdio_q** %2, align 8
  %3 = load %struct.qeth_qdio_q*, %struct.qeth_qdio_q** %2, align 8
  %4 = icmp ne %struct.qeth_qdio_q* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %14

6:                                                ; preds = %1
  %7 = load %struct.qeth_qdio_q*, %struct.qeth_qdio_q** %2, align 8
  %8 = getelementptr inbounds %struct.qeth_qdio_q, %struct.qeth_qdio_q* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @QDIO_MAX_BUFFERS_PER_Q, align 4
  %11 = call i32 @qdio_free_buffers(i32 %9, i32 %10)
  %12 = load %struct.qeth_qdio_q*, %struct.qeth_qdio_q** %2, align 8
  %13 = call i32 @kfree(%struct.qeth_qdio_q* %12)
  br label %14

14:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @qdio_free_buffers(i32, i32) #1

declare dso_local i32 @kfree(%struct.qeth_qdio_q*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
